@@ -1598,4 +1598,7 @@ R   [uuk]: improved world serialization API
 [uuk]: tweaked test framework a little bit
 [uuk]: written some more tests for the bases of the system
 [uuk]: window is now spawned during client setup instead of some time after, preparing for future rendering stuff
+[uuk]: added system to output chunk data maps to files
+[uuk]: fixed /chunk generate area command crashing due to wrong argument parsing
+[uuk]: added /chunk delete all command
 
