@@ -14,6 +14,8 @@ This project is not official by mojang and does not relate to it.
 import mcpython.server.worldgen.map.AbstractChunkInfoMap
 import typing
 from mcpython import shared
+import PIL.Image
+import random
 
 
 @shared.world_generation_handler
@@ -74,3 +76,13 @@ class BiomeMap(mcpython.server.worldgen.map.AbstractChunkInfoMap.AbstractMap):
 
     def set_at_xyz(self, x: int, y: int, z: int, biome: str):
         self.biome_map[x // 4, y // 4, z // 4] = biome
+
+    def dump_debug_info(self, file: str):
+        biome2color = {}
+        image = PIL.Image.new("RGBA", (16, 16))
+        for (x, y, z), biome in self.biome_map.items():
+            if biome not in biome2color:
+                seed = hash(biome)
+                biome2color[biome] = (seed % 256, seed % (256 ** 2) // 256, seed % (256 ** 3) // (256 ** 2), 255)
+            image.putpixel((x % 16, z % 16), biome2color[biome])
+        image.save(file)
